# insightpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
include/insightpp/: insightpp.h
include/insightpp/data/: container.h  initialization.h
include/insightpp/math/: activations.h  computation.h
include/insightpp/nn/: linear.h
tests/: CMakeLists.txt  test_library.cpp
